Fixed spacing issues and added link to rating a room page

--- a/src/Components/FilterComponent/Style.css
+++ b/src/Components/FilterComponent/Style.css
@@ -2,7 +2,6 @@
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 10; /* Stay at the top */
     left: 0;
