--- a/src/Components/RatingComponent/Style.css
+++ b/src/Components/RatingComponent/Style.css
@@ -6,15 +6,13 @@
 .rating .data {
     display: flex;
     flex-direction: column;
-    margin-left: 200px;
+    margin-left: 15px;
 }
 
 .rating .rating-header {
     width: 100%;
     height: 100%;
     display: flex;
-    /* background: rgb(196, 196, 196);
-    padding: 10px; */
 }
 
 .rating .rating-header .overall {
