--- a/src/SearchResult.css
+++ b/src/SearchResult.css
@@ -1,5 +1,5 @@
 .result-row {
 	width: 60%;
 	height: 100%;
-	margin-left: 240px;
+	margin-left: 90px;
 }
